# PINNs

./: .gitignore  CMakeLists.txt  Pipfile  basic.py  loss.txt  loss_testing.py  pinn_predictions.csv  pinn_test.py  predictions.txt  predictions_complex.txt  training_complex.txt
src/: CMakeLists.txt
src/include/: activation.h  autodiff_utils.h  denselayer.h  linear.h  loss.h  mlp.h  network.h  neuralnetwork.h  node.h  ops.h  optimizer.h  simulated_data.h  tensor.h  training.h  utils.h
src/src/: denselayer.cpp  linear.cpp  main.cpp  mlp.cpp  network.cpp  neuralnetwork.cpp  node.cpp  optimizer.cpp  tensor.cpp
